--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,3 +1,11 @@
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>hello world</title>
+</head>
 <body>
     <h1>hello world!!</h1>
+<p th:text="${placeType}">
+
+</p>
 </body>
+</html>
